# pgvector

./: .gitignore  CMakeLists.txt  IVFJL_README.md  Makefile  Makefile.cuda  README.md  build_python.sh  compile_commands.json  flat_results.json  introduction.txt  ivfflat.cpp  ivfjl.cpp  main backup.cpp  makefile.origin  martix-multiply.h  new.cpp  parallel_flat  parallel_jl  result.txt  run_all_test.sh  run_parallel_tests.py  run_unit_test.sh  sift  tags  test copy.py  test.py  test_ivfflat.py  test_ivfjl.py  test_ivfjl_backup.py  test_jl.cpp  test_martix_multiply.cpp  test_parallel.py  test_parallel_jl.py  test_tiny.py  test_total.cpp  total.cu  total.h  vector_search  代码阅读.md
cpp/: flat_results_backup.json  jl_results.json  opq_version.cpp  parallel_flat.cpp  parallel_jl.cpp  parallel_pq.cpp  result.py  sjlt_results.json  stacked_version.cpp  test_plot.py  vector_search
cuda/: CUDATimer.h  cuda_distances.cu  cuda_distances.h  cuda_wrapper.cu  cuda_wrapper.h  cudatimer.h  distances.cu  distances.h  fusion_cos_topk.cu  fusion_cos_topk.cuh  fusion_cos_topk_heap.cu  fusion_cos_topk_heap_sharedmem.cu  fusion_cos_topk_heap_sharedmem_basic.cu  fusion_cos_topk_warpsort.cu  kernels.cu  kernels.h  l2norm.cu  l2norm.cuh  martix-multiply.cu  matrix-multiply.cu  matrix-multiply.h  normalize.cu  pch.h  utils.cu  utils.cuh  warpsort.cu
cuda-distance-lib/: Makefile  README.md  test_distance
cuda-distance-lib/include/: distance.h
cuda-distance-lib/src/: cosine_distance.cu  distance.cpp  distance_cuda.cu  l2_distance.cu
cuda-distance-lib/test/: test_distance.cpp
cuda/dataset/: cpu_array_utils.h  dataset.cuh  dataset_wrapper.cpp
cuda/experiments/: distances.cu  distances.h  matrix-multiply.cu  matrix-multiply.h  normalize.cu  normalize.h
cuda/fine_screen_top_n/: example_usage.cu  fine_screen_top_n.cu  fine_screen_top_n.cuh  fine_screen_top_n_stream.cu  fine_screen_top_n_stream.cuh  fine_screen_top_n_v1.cu
cuda/fusion_cos_topk/: fusion_cos_topk.cuh  fusion_cos_topk_CUBLAS.cu  fusion_cos_topk_heap.cu  fusion_cos_topk_heap_sharedmem.cu  fusion_cos_topk_warpsort.cu  fusion_cos_topk_warpsort_count.cu  fusion_cos_topk_warpsort_count.cuh  fusion_cos_topk_warpsort_fine.cu  fusion_cos_topk_warpsort_fine_v1.cu  (+6 more)
cuda_tmp/: distances.cu  distances.h  matrix-multiply.cu  matrix-multiply.h
python/: README.md  ivf_tensor_bindings.cpp
sql/: vector--0.8.0.sql  vector.sql
src/: bitutils.bc  bitvec.bc  halfutils.bc  halfvec.bc  hnsw.bc  hnswbuild.bc  hnswinsert.bc  hnswscan.bc  hnswutils.bc  hnswvacuum.bc  ivfbuild.bc  ivfbuild.c  ivfbuild.h  ivfflat.bc  ivfflat.c  ivfflat.h  ivfinsert.bc  ivfinsert.c  ivfinsert.h  ivfjl.bc  ivfjl.c  ivfjl.h  ivfjl_example.cpp  ivfjlbuild.c  ivfjlbuild.h  ivfjlinsert.c  ivfjlscan.c  ivfkmeans.bc  ivfscan.bc  ivfscan.c  ivfscan.h  ivfscanbatch.c  ivfscanbatch.h  ivfutils.bc  ivfutils.c  ivfvacuum.bc  scanbatch.c  scanbatch.h  sparsevec.bc  test_batch_scan.c  (+4 more)
test_cuda/: Makefile  README.md  test_cosine_distance  test_cosine_distance.cu  test_l2_distance  test_l2_distance.cu  test_matrix_multiply  test_matrix_multiply.cu  test_utils.cpp  test_utils.cu  test_utils.cuh  test_utils.h  test_vector_normalizer  test_vector_normalizer.cu
test_gpu/: test_gpu_optimization.sql  test_optimized_gpu  test_optimized_gpu.c
test_ivfflat_batch/: 96.sql  performance_comparison_test.sql
unit_tests/: CMakeLists.txt  README.md  build_and_test.sh  test1.sh
unit_tests/common/: compare_utils.cuh  cpu_array_utils.h  cpu_distance.h  cpu_kmeans.h  cpu_search.h  cpu_utils.h  metrics_collector.cuh  output_macros.cuh  params_macros.cuh  test_config.h  test_utils.cu  test_utils.cuh  vector_nd.cuh
unit_tests/cpu_utils/: cpu_distance.h  cpu_search.h  cpu_sort.h  cpu_utils.h
unit_tests/test_bitonic/: CMakeLists.txt  test_bitonic.cu
unit_tests/test_cluster_data/: test_cluster_data.cu
unit_tests/test_cos_distance/: CMakeLists.txt  test_cos_distance.cu
unit_tests/test_cosine_distance/: CMakeLists.txt  test_cosine_distance.cu
unit_tests/test_cuda_select_topk/: Makefile  run.sh  test.cu
unit_tests/test_final_topk/: CMakeLists.txt  test_final_topk.cu
unit_tests/test_fusion_cos_topk/: CMakeLists.txt  test_fusion_cos_topk.cu
unit_tests/test_fusion_cos_topk_fine/: CMakeLists.txt  test_fusion_cos_topk_fine.cu
unit_tests/test_fusion_cos_topk_fine_v3_fixed_probe/: CMakeLists.txt  test_fusion_cos_topk_fine_v3_fixed_probe.cu
unit_tests/test_fusion_cos_topk_fine_v5/: CMakeLists.txt  test_fusion_cos_topk_fine_v5.cu
unit_tests/test_fusion_cos_topk_warpsort_count/: CMakeLists.txt  test_fusion_cos_topk_warpsort_count.cu
unit_tests/test_fusion_cosine_topk/: CMakeLists.txt  test_fusion_cosine_topk.cu
unit_tests/test_integrated_coarse_fine/: CMakeLists.txt  test_integrated_coarse_fine.cu
unit_tests/test_integrated_coarse_fine_balance/: CMakeLists.txt  test_integrated_coarse_fine.cu
unit_tests/test_integrated_coarse_fine_choose/: CMakeLists.txt  test_integrated_coarse_fine_choose.cu
unit_tests/test_integrated_coarse_fine_pipeline/: CMakeLists.txt  test_integrated_coarse_fine_pipeline.cu
unit_tests/test_ivfflat_search/: CMakeLists.txt  test_ivfflat_search.cu
unit_tests/test_ivfflat_search_balance/: CMakeLists.txt  test_ivfflat_search_balance.cu
unit_tests/test_ivfflat_search_lookup/: CMakeLists.txt  test_ivfflat_search_lookup.cu
unit_tests/test_ivfflat_search_pipeline/: CMakeLists.txt  test_ivfflat_search_pipeline.cu
unit_tests/test_kmeans/: CMakeLists.txt  test_kmeans.cu  test_kmeans_fp16.cu
unit_tests/test_l2norm/: CMakeLists.txt  test_l2norm.cu
unit_tests/test_matrix_multiply/: CMakeLists.txt  test_matrix_multiply.cu
unit_tests/test_print_cuda/: CMakeLists.txt  test_print_cuda.cu
unit_tests/test_select_k/: CMakeLists.txt  test_select_k.cu
unit_tests/test_stream_pass_data/: CMakeLists.txt  README.txt  stream_pass_data.cu  stream_pass_data.cuh  test_stream_pass_data.cu
unit_tests/test_template/: test_template.cu
unit_tests/test_vector_normalizer/: CMakeLists.txt  test_vector_normalizer.cu
unit_tests/test_warpsort/: CMakeLists.txt  test_warpsort.cu
(+58 files in other folders)
